@@ -50,7 +50,6 @@ import xyz.zedler.patrick.grocy.databinding.FragmentMasterProductGroupBinding;
 import xyz.zedler.patrick.grocy.helper.DownloadHelper;
 import xyz.zedler.patrick.grocy.model.ProductGroup;
 import xyz.zedler.patrick.grocy.util.PrefsUtil;
-import xyz.zedler.patrick.grocy.util.SortUtil;
 import xyz.zedler.patrick.grocy.util.ViewUtil;
 
 public class MasterProductGroupFragment extends BaseFragment {
@@ -158,14 +157,10 @@ public class MasterProductGroupFragment extends BaseFragment {
     MasterProductGroupFragmentArgs args = MasterProductGroupFragmentArgs
         .fromBundle(requireArguments());
     editProductGroup = args.getProductGroup();
-    if (editProductGroup != null) {
+    if (editProductGroup != null && savedInstanceState == null) {
       fillWithEditReferences();
     } else if (savedInstanceState == null) {
-      resetAll();
-      new Handler().postDelayed(
-          () -> activity.showKeyboard(binding.editTextMasterProductGroupName),
-          50
-      );
+      activity.showKeyboard(binding.editTextMasterProductGroupName);
     }
 
     // START
@@ -283,7 +278,6 @@ public class MasterProductGroupFragment extends BaseFragment {
               new TypeToken<ArrayList<ProductGroup>>() {
               }.getType()
           );
-          SortUtil.sortProductGroupsByName(productGroups, true);
           productGroupNames = getProductGroupNames();
 
           binding.swipeMasterProductGroup.setRefreshing(false);
@@ -292,8 +286,6 @@ public class MasterProductGroupFragment extends BaseFragment {
 
           if (isRefresh && editProductGroup != null) {
             fillWithEditReferences();
-          } else {
-            resetAll();
           }
         },
         error -> {
