@@ -51,7 +51,6 @@ import xyz.zedler.patrick.grocy.helper.DownloadHelper;
 import xyz.zedler.patrick.grocy.model.QuantityUnit;
 import xyz.zedler.patrick.grocy.util.PluralUtil;
 import xyz.zedler.patrick.grocy.util.PrefsUtil;
-import xyz.zedler.patrick.grocy.util.SortUtil;
 import xyz.zedler.patrick.grocy.util.ViewUtil;
 
 public class MasterQuantityUnitFragment extends BaseFragment {
@@ -173,14 +172,10 @@ public class MasterQuantityUnitFragment extends BaseFragment {
     MasterQuantityUnitFragmentArgs args = MasterQuantityUnitFragmentArgs
         .fromBundle(requireArguments());
     editQuantityUnit = args.getQuantityUnit();
-    if (editQuantityUnit != null) {
+    if (editQuantityUnit != null && savedInstanceState == null) {
       fillWithEditReferences();
     } else if (savedInstanceState == null) {
-      resetAll();
-      new Handler().postDelayed(
-          () -> activity.showKeyboard(binding.editTextMasterQuantityUnitName),
-          50
-      );
+      activity.showKeyboard(binding.editTextMasterQuantityUnitName);
     }
 
     // START
@@ -298,7 +293,6 @@ public class MasterQuantityUnitFragment extends BaseFragment {
               new TypeToken<ArrayList<QuantityUnit>>() {
               }.getType()
           );
-          SortUtil.sortQuantityUnitsByName(quantityUnits, true);
           quantityUnitNames = getQuantityUnitNames();
 
           binding.swipeMasterQuantityUnit.setRefreshing(false);
@@ -307,8 +301,6 @@ public class MasterQuantityUnitFragment extends BaseFragment {
 
           if (isRefresh && editQuantityUnit != null) {
             fillWithEditReferences();
-          } else {
-            resetAll();
           }
         },
         error -> {
