@@ -51,7 +51,6 @@ import xyz.zedler.patrick.grocy.databinding.FragmentMasterTaskCategoryBinding;
 import xyz.zedler.patrick.grocy.helper.DownloadHelper;
 import xyz.zedler.patrick.grocy.model.TaskCategory;
 import xyz.zedler.patrick.grocy.util.PrefsUtil;
-import xyz.zedler.patrick.grocy.util.SortUtil;
 import xyz.zedler.patrick.grocy.util.ViewUtil;
 
 public class MasterTaskCategoryFragment extends BaseFragment {
@@ -152,14 +151,10 @@ public class MasterTaskCategoryFragment extends BaseFragment {
     MasterTaskCategoryFragmentArgs args = MasterTaskCategoryFragmentArgs
         .fromBundle(requireArguments());
     editTaskCategory = args.getTaskCategory();
-    if (editTaskCategory != null) {
+    if (editTaskCategory != null && savedInstanceState == null) {
       fillWithEditReferences();
     } else if (savedInstanceState == null) {
-      resetAll();
-      new Handler().postDelayed(
-          () -> activity.showKeyboard(binding.editTextName),
-          50
-      );
+      activity.showKeyboard(binding.editTextName);
     }
 
     // START
@@ -277,7 +272,6 @@ public class MasterTaskCategoryFragment extends BaseFragment {
               new TypeToken<ArrayList<TaskCategory>>() {
               }.getType()
           );
-          SortUtil.sortTaskCategoriesByName(taskCategories, true);
           taskCategoryNames = getTaskCategoryNames();
 
           binding.swipe.setRefreshing(false);
@@ -286,8 +280,6 @@ public class MasterTaskCategoryFragment extends BaseFragment {
 
           if (isRefresh && editTaskCategory != null) {
             fillWithEditReferences();
-          } else {
-            resetAll();
           }
         },
         error -> {
